--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -226,7 +226,7 @@ footer {
   background:  #ff0000e7; 
   color: #fff;
   text-align: center;
-  padding: 15px;
+  padding: 40px;
   margin-top: 40px;
 }
 
@@ -429,7 +429,7 @@ nav ul {
 /* Estilo del encabezado rojo */
 header {
   background-color: red;
-  padding: 20px 10px;   /* espacio arriba/abajo y a los lados */
+   padding: 50px 100px;   /* espacio arriba/abajo y a los lados */
   display: flex;
   align-items: center;  /* centra verticalmente */
   justify-content: space-between; /* separa logo y menú */
@@ -449,7 +449,7 @@ header nav ul {
   gap: 20px;
   margin: 0;
   padding: 0;
-  flex-wrap: wrap;  /* permite que salten de línea si no caben */
+    /* permite que salten de línea si no caben */
 }
 
 /* Ajuste especial en pantallas pequeñas */
@@ -468,7 +468,7 @@ header nav ul {
 /* ----- ENCABEZADO ----- */
 header {
   background-color: red;
-  padding: 20px 15px;
+   padding: 50px 80px;;
   width: 100%;
   box-sizing: border-box;
 }
@@ -492,7 +492,7 @@ footer {
   background-color: red;
   color: white;
   text-align: center;
-  padding: 20px 10px;
+   padding: 50px 80px;
   width: 100%;
   position: relative; 
   bottom: 0;
