--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -45,15 +45,15 @@ footer {
 }
 
 .card, .foto {
-  background: rgb(202, 97, 97);
+  background:  #408ee0; 
   color: black;
-  padding: 20px;
+  padding: 0px;
   border-radius: 10px;
   text-align: center;
 }
 
 .galeria img {
-  max-width: 200px;
+  max-width: 100px;
   border-radius: 10px;
   
 }
