--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -201,6 +201,12 @@ nav a {
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   max-width: 350px;
 }
+ .benef{
+  display: flex;
+  flex-direction: column; /* Hace que los hijos se acomoden uno debajo del otro */
+  align-items: center;    /* Centra horizontalmente */
+  text-align: center;     /* Centra el texto */
+}
 
 .benefits h3 {
   margin-bottom: 15px;
