--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -194,20 +194,23 @@ nav a {
 }
 /*cuadro de texto*/
 /* ===== Beneficios ===== */
-.benefits {
-  background: #a6e237;
-  padding: 20px 25px;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  max-width: 350px;
-}
- .benef{
+/* Contenedor de la sección principal */
+.seccion-principal {
   display: flex;
-  flex-direction: column; /* Hace que los hijos se acomoden uno debajo del otro */
-  align-items: center;    /* Centra horizontalmente */
+  flex-direction: column; /* Uno debajo del otro */
+  align-items: center;    /* Centrado horizontal */
   text-align: center;     /* Centra el texto */
 }
 
+/* Estilos del cuadro de beneficios */
+.beneficios {
+  background-color: #8BC34A; /* verde */
+  padding: 15px;
+  border-radius: 10px;
+  margin-top: 20px;  /* espacio debajo del título */
+  max-width: 300px;  /* ancho máximo */
+
+}
 .benefits h3 {
   margin-bottom: 15px;
 }
