--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -14,7 +14,8 @@ header {
 
 header nav a {
   color: rgb(32, 31, 31);
-  margin: 0 15px;
+  padding: 10px ;
+  margin: 0 5px;
   text-decoration: none;
   font-weight: bold;
 }
