--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -112,7 +112,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 15px 40px;
-  background: #d82121;
+  background:  #ff0000e7;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
